# cpplot

./: .gitignore  CMakeLists.txt  README.md
.github/actions/prepare-environment/: action.yml
.github/workflows/: test_suite.yml
cmake/: cpplot-config.cmake.in
examples/: CMakeLists.txt  example.cpp
src/cpplot/: cpplot.hpp
test/: CMakeLists.txt  test_suite.cpp  tests.cpp
